--- a/lib/Bif/DB.pod
+++ b/lib/Bif/DB.pod
@@ -5,7 +5,7 @@ Bif::DB - helper methods for a read-only bif database
 
 =head1 VERSION
 
-0.1.0 (yyyy-mm-dd)
+0.1.0_4 (yyyy-mm-dd)
 
 =head1 SYNOPSIS
 
