--- a/lib/Bif/DB/RW.pod
+++ b/lib/Bif/DB/RW.pod
@@ -5,7 +5,7 @@ Bif::DB::RW - read-write helper methods for a bif database
 
 =head1 VERSION
 
-0.1.0 (yyyy-mm-dd)
+0.1.0_4 (yyyy-mm-dd)
 
 =head1 SYNOPSIS
 
