--- a/lib/bif-sql-func-new-project.pod
+++ b/lib/bif-sql-func-new-project.pod
@@ -4,7 +4,7 @@ bif-sql-func-new-project - add a new project to an update
 
 =head1 VERSION
 
-0.1.0 (yyyy-mm-dd)
+0.1.0_4 (yyyy-mm-dd)
 
 =head1 SYNOPSIS
 
