--- a/lib/bif-sql-table-projects.pod
+++ b/lib/bif-sql-table-projects.pod
@@ -4,7 +4,7 @@ bif-sql-table-projects - project current meta data
 
 =head1 VERSION
 
-0.1.0 (yyyy-mm-dd)
+0.1.0_4 (yyyy-mm-dd)
 
 =head1 DEFINITION
 
