Import of MLAWREN/App-bif-0.1.0_15 from CPAN.
gitpan-cpan-distribution: App-bif
gitpan-cpan-version:      0.1.0_15
gitpan-cpan-path:         MLAWREN/App-bif-0.1.0_15.tar.gz
gitpan-cpan-author:       MLAWREN
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -1,9 +1,7 @@
 Bif Project Management Tool
-    Bif is a project management tool with a command-line interface. It
-    tracks tasks and issues using a local database, exchanging updates with
-    remote databases on demand.
-
-    The bif data model supports a couple of features which may be of
+    Bif is a project management tool with a command-line interface. It helps
+    you track tasks and issues using a local database, exchanging updates
+    with remote databases on demand. The tool has several features of
     interest to distributed project teams:
 
     Offline Operation
