Import of MLAWREN/App-bif-0.1.0_19 from CPAN.
gitpan-cpan-distribution: App-bif
gitpan-cpan-version:      0.1.0_19
gitpan-cpan-path:         MLAWREN/App-bif-0.1.0_19.tar.gz
gitpan-cpan-author:       MLAWREN
gitpan-cpan-maturity:     developer

--- a/TODO
+++ b/TODO
@@ -1,9 +1,14 @@
+* Instead of magically matching arguments against an ID, ALIAS,
+LOCATION etc, require an option to specify exactly what the input is,
+like we are starting to do with UUIDs.
+
 * Make a code of conduct. How about borrowing Debian's:
     https://www.debian.org/vote/2014/vote_002
 
 * Put the protocol version number in the location uri?
 
     ssh+bs1://org@provider.com
+    bif1+ssh://org@provider.com
 
 * Bug: Given an issue in two projects, pushing either of those projets
 to a hub will fail because the second project doesn't exist at the hub.
