Import of MLAWREN/App-bif-0.1.0_22 from CPAN.
gitpan-cpan-distribution: App-bif
gitpan-cpan-version:      0.1.0_22
gitpan-cpan-path:         MLAWREN/App-bif-0.1.0_22.tar.gz
gitpan-cpan-author:       MLAWREN
gitpan-cpan-maturity:     developer

--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+* Hide IDs in show issue for projects that are not local.
+
+* Rename Bif::Client->debug_bs to debug_bifsync
+
+* Use Test::Kit[2]
+
 * Instead of magically matching arguments against an ID, ALIAS,
 LOCATION etc, require an option to specify exactly what the input is,
 like we are starting to do with UUIDs.
