--- a/lib/bif-doc-design.pod
+++ b/lib/bif-doc-design.pod
@@ -5,7 +5,7 @@ management tool x does what it does.
 
 =head1 Version
 
-0.1.0_21 (2014-05-09)
+0.1.0_22 (2014-05-10)
 
 =head1 Background
 
@@ -137,9 +137,6 @@ to the quality of the documentation.
 
 =head1 Data Model
 
-Tables for current state of topics, table for updates to topics, tables
-to track meta data (Merkle trees).
-
 Bif is not implementing a distributed database, or at least not in the
 classical sense where all nodes need to agree on what the "current" or
 "latest" values for objects are, based on some kind of consensus
@@ -150,7 +147,29 @@ missing updates. I.e. there is no consensus. This works because the
 users do not need a real-time global view of projects, in the same way
 they don't need real-time emails.
 
-=head2 Updates, or Changesets
+=head2 Assumptions
+
+We assume that there are relatively few project updates in comparison
+to task and issue updates.
+
+=head2 User Data
+
+There are tables for $THINGS which usually also have a row in the
+"topics" table: projects, tasks, issues, hubs, hub locations, and
+status types for all of those. They have columns for a current state if
+applicable, and may have columns that indicate a relationship (e.g.
+projects.hub_id).
+
+There is a table for "updates" that represent changes, but that table
+only contains timestamps, author details, and a message.
+
+There are tables for $THINGS_updates, which relate a particular
+"update" with changes to $THINGS.
+
+There are sometimes tables for many-to-many relationships, such as an
+issue having a different status for each project.
+
+=head3 Updates, or Changesets
 
 A Bif update can actually be composed of many operations in the
 database, but everything relates to a single row in the C<updates>
@@ -184,7 +203,122 @@ Updates are immutable, and they can't be easily deleted from
 everywhere. For the moment at least. Possibly thinking about updates to
 an update...
 
-=head1 Network operations
+=head2 Merkle Trees
+
+=head2 Meta Data
+
+Two types of meta data are calculated and stored in addition to the
+user data
+
+=head3 Hub Meta Data
+
+In each repository we track the related hub_update,
+hub_location_updates, project_updates and *_status_updates in the
+"hub_related_updates" table.
+
+=begin graph-easy
+
+    graph { flow: north; }
+    [ hub\nupdates ] --> [ hub\nrelated\nupdates ]
+    [ hub\nlocation\nupdates ] --> [ hub\nrelated\nupdates ]
+    [ project\nupdates ] --> [ hub\nrelated\nupdates ]
+    [ project\nstatus\nupdates ] --> [ hub\nrelated\nupdates ]
+    [ task\nstatus\nupdates ] --> [ hub\nrelated\nupdates ]
+    [ issue\nstatus\nupdates ] --> [ hub\nrelated\nupdates ]
+
+=end graph-easy
+
+                     +---------++---------+
+                     |  task   ||   hub   |
+                     | status  || updates |
+                     | updates ||         |
+                     +---------++---------+
+                       |          |
+                       |          |
+                       v          v
+    +----------+     +--------------------+     +---------+
+    |   hub    |     |                    |     |  issue  |
+    | location |     |                    |     | status  |
+    | updates  | --> |        hub         | <-- | updates |
+    +----------+     |      related       |     +---------+
+    +----------+     |      updates       |     +---------+
+    | project  |     |                    |     | project |
+    | updates  |     |                    |     | status  |
+    |          | --> |                    | <-- | updates |
+    +----------+     +--------------------+     +---------+
+
+These are tracked not just for the local repository, but also for
+remote repositories (hubs).
+
+=head3 Project Meta Data
+
+When a local user registers a hub all project-only details are
+imported.  Initially this so that the local user can see what projects
+are available on the hub. Therefore, for each hub we track the related
+project_updates and *_status_updates in the "hub_related_updates"
+table.
+
+
+current state of topics, table for updates to topics, tables to track
+meta data (Merkle trees).
+
+=head2 Hub Registration
+
+When a local user registers a hub all project-only details are imported
+from the "hub_related_updates" table.  Initially this so that the local
+user can see what projects are available on the hub.
+
+=begin graph-easy
+
+    graph { flow: west; }
+
+    [ hub ] -- hub_related_updates --> [ local ]
+
+=end graph-easy
+
+    +-------+  hub_related_updates   +-----+
+    | local | <--------------------- | hub |
+    +-------+                        +-----+
+
+=head2 Project Export
+
+The first part of a project export is a local operation. The local
+project-only updates are added to hub_related_updates. The next time a
+hub sync happens the details will be transferred across.
+
+=begin graph-easy
+
+    graph { flow: east; }
+
+    [ local ] <-- hub_related_updates --> [ hub ]
+
+=end graph-easy
+
+    +-------+  hub_related_updates    +-----+
+    | local | <---------------------> | hub |
+    +-------+                         +-----+
+
+If nothing else happened this could be considered a shallow export,
+meaning the project can be referenced on the hub, but is not fully
+available there.  This is useful for inter-hub collaboration as we
+shall see later.
+
+The second part of an export is to update the project to set its hub_id
+values.
+
+The third part of an export is the synchronisation of the
+project_related_updates on both sides. However given that the hub
+doesn't have anyting in there yet this is effectively a one-way copy.
+
+=head2 Project Import
+
+We already have project-only updates for $PROJECT in the database. We
+may also have issue updates related to $PROJECT locally.
+
+Basically just copies everything relating to a project from one
+repository to another.
+
+=head1 Network Communication
 
 =head2 Protocol
 
@@ -215,11 +349,6 @@ The server will generally keep the connection open and answering
 commands until the client sends a QUIT message:
 
     ["QUIT"]
-
-=head2 Export/Import
-
-Basically just copies everything relating to a project from one
-repository to another.
 
 =head2 Merkle tree synchronisation
 
